--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -75,12 +75,12 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/KnifeThrow
-MRUItem2=/Game/_Scenes/HeartBall
-MRUItem3=/Game/_Scenes/IntroScene
-MRUItem4=/Game/_Scenes/Bowling
-MRUItem5=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/KnifeThrow
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/IntroScene
+MRUItem5=/Game/_Scenes/Bowling
 MRUItem6=/Game/_Scenes/ClownBall
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Audio/_GeneralUse
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -116,7 +116,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1813,6 +1813,8 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat;
+RecentlyPlaced=/Game/FBX_Models/Maze/BarrelV1/Barrel_V1.Barrel_V1;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
@@ -1831,14 +1833,12 @@ RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
 RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Env_Fire_Grate_01.P_Env_Fire_Grate_01;
 RecentlyPlaced=/Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/FeatureWall/Feature_Wall_Sprite.Feature_Wall_Sprite;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=3.000 Y=5.000
+ScreenPosition=X=3.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1860,7 +1860,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/CE_12_Scream2Female_IPR_Adam.wav
+GenericImport=C:/Users/Matt/Desktop/CE_17_Ding_IPR_MattEdit.wav
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2485,8 +2485,6 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
-bImportMaterials=False
-bImportTextures=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
@@ -2646,6 +2644,7 @@ bConvertSceneUnit=False
 /Game/Audio/HeartBall/CE_16_HeartBeingFired_IPR_Adam.CE_16_HeartBeingFired_IPR_Adam=1
 /Game/_Scenes/Maze.Maze:PersistentLevel.AmbientSound_Electricity_Machine.AmbientSound_Electricity_Machine_SoundCue=0
 /Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
+/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat=0
 
 [MaterialEditor]
 PrimType=1
